@@ -210,7 +210,7 @@ DBUser=root
 
 ### Option: CacheSize
 #	Size of configuration cache, in bytes.
-#	Shared memory size, for storing hosts and items data.
+#	Shared memory size for storing hosts and items data.
 #
 # Mandatory: no
 # Range: 131072-1073741824 (128KB-1GB)
@@ -224,6 +224,33 @@ DBUser=root
 # Range: 1-3600
 # Default:
 # CacheUpdateFrequency=60
+
+### Option: HistoryCacheSize
+#	Size of history cache, in bytes.
+#	Shared memory size for storing history data.
+#
+# Mandatory: no
+# Range: 131072-1073741824 (128KB-1GB)
+# Default:
+# HistoryCacheSize=8388608
+
+### Option: TrendCacheSize
+#	Size of trend cache, in bytes.
+#	Shared memory size for storing trends data.
+#
+# Mandatory: no
+# Range: 131072-1073741824 (128KB-1GB)
+# Default:
+# TrendCacheSize=4194304
+
+### Option: HistoryTextCacheSize
+#	Size of text history cache, in bytes.
+#	Shared memory size for storing character, text or log history data.
+#
+# Mandatory: no
+# Range: 131072-1073741824 (128KB-1GB)
+# Default:
+# HistoryTextCacheSize=16777216
 
 ### Option: NodeNoEvents
 #	If set to '1' local events won't be sent to master node.
