@@ -137,7 +137,10 @@ int	CONFIG_DBSYNCER_FORKS		= 1;
 int	CONFIG_DBSYNCER_FREQUENCY	= 5;
 int	CONFIG_DBCONFIG_FORKS		= 1;
 int	CONFIG_DBCONFIG_FREQUENCY	= 60;
-int	CONFIG_DBCONFIG_SIZE		= 8*1024*1024;
+int	CONFIG_DBCONFIG_SIZE		= 8388608;	/* 8MB */
+int	CONFIG_HISTORY_CACHE_SIZE	= 8388608;	/* 8MB */
+int	CONFIG_TRENDS_CACHE_SIZE	= 4194304;	/* 4MB */
+int	CONFIG_TEXT_CACHE_SIZE		= 16777216;	/* 16MB */
 int	CONFIG_UNREACHABLE_PERIOD	= 45;
 int	CONFIG_UNREACHABLE_DELAY	= 15;
 int	CONFIG_UNAVAILABLE_DELAY	= 60;
@@ -213,6 +216,9 @@ void	init_config(void)
 		{"StartTrappers",&CONFIG_TRAPPERD_FORKS,0,TYPE_INT,PARM_OPT,0,255},
 
 		{"CacheSize",&CONFIG_DBCONFIG_SIZE,0,TYPE_INT,PARM_OPT,128*1024,1024*1024*1024},
+		{"HistoryCacheSize",&CONFIG_HISTORY_CACHE_SIZE,0,TYPE_INT,PARM_OPT,128*1024,1024*1024*1024},
+		{"TrendCacheSize",&CONFIG_TRENDS_CACHE_SIZE,0,TYPE_INT,PARM_OPT,128*1024,1024*1024*1024},
+		{"HistoryTextCacheSize",&CONFIG_TEXT_CACHE_SIZE,0,TYPE_INT,PARM_OPT,128*1024,1024*1024*1024},
 		{"CacheUpdateFrequency",&CONFIG_DBCONFIG_FREQUENCY,0,TYPE_INT,PARM_OPT,1,3600},
 
 		{"HousekeepingFrequency",&CONFIG_HOUSEKEEPING_FREQUENCY,0,TYPE_INT,PARM_OPT,1,24},
